# sling

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  sling.sublime-project
include/: computation.h  config.h  junction.h  mind.h  minded_computation.h
include/sling/: computation.h  context.h  datum.h  determinacy.h  int32_datum.h  int32_sum.h  junction.h  mind.h  minded_computation.h  state.h  symbol.h
src/: README.md  context.c  context.cpp  context.h  datum.c  datum.h  determinacy.cpp  diagnostic.h  init.c  init.h  log.h  main.cpp  minded_computation.cpp  sling.c  sling_init.c  sling_init.h  state.cpp  transform.c  transform.h  transform_description.c  transform_description.h  transmitter.c  transmitter.h  type_description.c  type_description.h  utils.c  utils.h
src/datum/: datum.c  datum.h  description.c  description.h  double.h  int32.c  int32.h
src/minds/: int32_compare.c  int32_compare.h  int32_sign.c  int32_sign.h  mind.c  mind.h  mind_description.c  mind_description.h
src/mt/: minded_transform.c  minded_transform.h  state.c  state.h
src/transforms/: context_filter.c  context_filter.h  int32_addition.c  int32_addition.h  int32_duplicator.c  int32_duplicator.h  (+12 more)
tests/: basic_minds_tests.c  basic_minds_tests.h  basic_transforms_tests.c  basic_transforms_tests.h  context_filter_tests.c  context_filter_tests.h  hash_map_tests.c  hash_map_tests.h  minded_transforms_tests.c  minded_transforms_tests.h  tests_tools.c  tests_tools.h  transmitter_tests.c  transmitter_tests.h  trie_tests.c  trie_tests.h  unit_tests_main.c  unit_tests_main.h
(+21 files in other folders)
